# black-rose_auth-api

./: .env.example  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml
entity/: Cargo.toml
entity/src/entities/: auth_group.rs  auth_group_application.rs  auth_group_category.rs  auth_group_filter.rs  auth_group_filter_group.rs  auth_group_filter_rule.rs  auth_group_permission.rs  auth_group_roles.rs  auth_group_user.rs  auth_permission.rs  auth_role.rs  auth_role_permissions.rs  auth_role_users.rs  auth_user.rs  auth_user_character_ownership.rs  auth_user_permission.rs  eve_alliance.rs  eve_character.rs  eve_corporation.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240222_000001_initial.rs  m20240302_000002_permissions.rs  m20240302_000002_permissions_and_groups.rs  m20240303_000002_groups.rs  m20240303_000003_groups.rs
src/: error.rs  lib.rs  main.rs  router.rs
src/auth/: mod.rs  permissions.rs  seed.rs
src/auth/data/: group.rs  group_filters.rs  groups.rs  mod.rs  user.rs
src/auth/model/: group.rs  groups.rs  user.rs
src/auth/route/: auth.rs  group.rs  groups.rs  login.rs  mod.rs  user.rs
src/auth/routes/: login.rs  user.rs
src/auth/service/: login.rs
src/core/: mod.rs  routes.rs  seed.rs
src/core/controller/: login.rs  user.rs
src/core/data/: permission.rs  user.rs
src/core/model/: user.rs
src/core/service/: login.rs  user.rs
src/eve/: mod.rs
src/eve/data/: alliance.rs  character.rs  corporation.rs
src/mock/: eve_esi_mock.rs  mod.rs
tests/: integration_tests.rs  tests.rs
tests/common/: mod.rs
tests/groups/: join.rs
(+17 files in other folders)
