[package]
name = "black-rose_auth-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_oauth2 = { path = "/home/hyziri/blackrose/eve_oauth2" }
eve_esi = { path = "/home/hyziri/blackrose/eve_esi" }
dotenv = "0.15.0"
migration = { path = "migration" } 
entity = { path = "entity" } 
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ] }
redis = "0.24.0"
rand = "0.8.5"
chrono = "0.4.34"
serde = { version = "1.0.197", features = ["derive"] }
actix-session = { version = "0.9.0", features = ["redis-actor-session"] }
actix-web = "4.5.1"
actix-cors = "0.7.0"
oauth2 = "4.4.2"
anyhow = "1.0.80"
