[package]
name = "black-rose_auth-api"
version = "0.1.0"
edition = "2021"

[workspace]
members = [".", "migration", "entity"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eve_esi = "0.1.0"
eve_oauth2 = "0.2.0"
dotenv = "0.15.0"
migration = { path = "migration" } 
entity = { path = "entity" } 
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "with-chrono" ] }
redis = "0.25.3"
rand = "0.8.5"
chrono = "0.4.34"
serde = { version = "1.0.197", features = ["derive"] }
oauth2 = "4.4.2"
anyhow = "1.0.80"
axum = "0.7.5"
tokio = "1.37.0"
tower-sessions = "0.12.1"
tower-sessions-redis-store = "0.12.0"
time = "0.3.35"
